--- a/Chatroom/templates/view_room.html
+++ b/Chatroom/templates/view_room.html
@@ -54,7 +54,7 @@
       document.getElementById("message_input_form").onsubmit = function (
         event
       ) {
-        event.preventDefault();
+        event.preventDefault();  <!-- prevent the get request -->
         let message = message_input.value.trim();
         console.log(message);
         if (message.length) {
